<?xml version="1.0"?>
<package>
  <name>simple_robot_LIDAR</name>
  <version>0.0.1</version>
  <description>
    This ROS package provides a slight advancement on the simple robot by including LIDAR components in the robot urdf
  </description>
  
  <maintainer email="gavin.kane@hs-emden-leer.de">Gavin Kane</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>
</package>
